# amapa-politico-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: arquitetura.md  release-academica-v1.md  roadmap-v1.md
src/amapa_politico_monitor/: __init__.py  crew.py  logger.py  main.py  settings.py
src/amapa_politico_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/amapa_politico_monitor/agents/: political_agents.py
src/amapa_politico_monitor/config/: municipios.py  orgaos.py  palavras_chave.py
src/amapa_politico_monitor/crews/: political_monitor_crew.py
src/amapa_politico_monitor/models/: news_item.py
src/amapa_politico_monitor/services/: news_collection_service.py  news_enrichment_service.py
src/amapa_politico_monitor/tasks/: political_tasks.py
src/amapa_politico_monitor/tools/: custom_tool.py
src/amapa_politico_monitor/ui/: __init__.py  app.py  mock_data.py
tests/: test_basic_paths.py  test_municipios_config.py  test_news_collection_service.py  test_news_enrichment_service.py  test_news_item.py  test_project_structure.py  test_streamlit_deploy_config.py
