[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amapa-politico-monitor"
version = "1.0.0"
description = "Sistema multiagente para monitoramento de notícias políticas do Estado do Amapá utilizando CrewAI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Fredson Alves", email = "fredson.alves2009@gmail.com" }
]

keywords = [
    "CrewAI",
    "OSINT",
    "Monitoramento",
    "Política",
    "Amapá",
    "Inteligência",
    "OpenAI"
]

dependencies = [
    "crewai>=0.130.0",
    "crewai-tools>=0.45.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pandas>=2.2.2",
    "python-dateutil>=2.9.0",
    "loguru>=0.7.2",
    "PyYAML>=6.0.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.urls]
Homepage = "https://github.com/FredsonAlves/amapa-politico-monitor"
Repository = "https://github.com/FredsonAlves/amapa-politico-monitor"
Documentation = "https://github.com/FredsonAlves/amapa-politico-monitor"
Issues = "https://github.com/FredsonAlves/amapa-politico-monitor/issues"